update leftPanel display

--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -45,9 +45,6 @@
                     <li><a href="#">graph-rocketmq-e9a0d62dbd8a1a6163870828d583300eb27e324a.json</a></li>
                     <li><a href="#">graph-rocketmq-f508f131f7dee2bcb86e66a6beb7bbdedbe31bc6.json</a></li>
                     <li><a href="#">graph-spring-framework-3c1adf7f6af0dff9bda74f40dabe8cf428a62003.json</a></li>
-                    <li><a href="#">graph2.json</a></li>
-                    <li><a href="#">data10.json</a></li>
-                    <li><a href="#">data1.json</a></li>
                 </ul>
                 <!--            <button type="button" class="btn btn-default" style="margin-left: 200vh" onclick="reset()">Reset</button>-->
             </div>
@@ -81,19 +78,19 @@
     </div>
 
     <div id="rightPanel" class="col-md-3">
-        <div>
-            <h4>changed files:</h4>
+
+        <h4>Changed files:</h4>
+        <div id= "changed_files">
             <div class="alert alert-success" role="alert"></div>
-            <h4>diff entry:</h4>
         </div>
         <div>
-            <h4>Link Types:</h4>
-            <div class="alert alert-success" role="alert">Def Use Link</div>
-            <div class="alert alert-success" role="alert">Abstract Method Link</div>
-            <div class="alert alert-success" role="alert">Override Method Link</div>
-            <div class="alert alert-success" role="alert">Implement Method Link</div>
-            <div class="alert alert-success" role="alert">Systematic Change Link</div>
-            <h4>diff entry:</h4>
+            <h4>Link types:</h4>
+            <div class="alert alert-success" role="alert" id="defuse">Def Use Link</div>
+            <div class="alert alert-success" role="alert" id="abstract">Abstract Method Link</div>
+            <div class="alert alert-success" role="alert" id="override">Override Method Link</div>
+            <div class="alert alert-success" role="alert" id="implement">Implement Method Link</div>
+            <div class="alert alert-success" role="alert" id="systematic">Systematic Change Link</div>
+            <h4>Diff entry:</h4>
         </div>
         <div id="rightEditor" ></div>
     </div>
