clear rightPanel content after reset

--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -80,7 +80,7 @@
 
         <h4>Changed files:</h4>
         <div id= "changed_files">
-            <div class="alert alert-success" role="alert"></div>
+<!--            <div class="alert alert-success" role="alert"></div>-->
         </div>
         <div>
             <h4>Link types:</h4>
