--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -35,16 +35,21 @@
                         aria-expanded="false">
                     Commit <span class="caret"></span>
                 </button>
+<!--                graph-(.*)\.json-->
+<!--                <li><a href="./tasks/graph-$1.json">$1</a></li>-->
                 <ul class="dropdown-menu" id="dropdown-menu">
-                    <li><a href="#">graph-rocketmq-37cf2a7cb706a0cfe5b217940467c4a9cb33626e.json</a></li>
-                    <li><a href="#">graph-rocketmq-3292d039ae882f42168d5f98969df83130ca05fb.json</a></li>
-                    <li><a href="#">graph-rocketmq-85467dfd34d8ff379d2ddfec0489d78dcba20c27.json</a></li>
-                    <li><a href="#">graph-rocketmq-b1fcf1b83b659bd03bcebf651d9e88c294a89e07.json</a></li>
-                    <li><a href="#">graph-rocketmq-b421d48c476e74a8c7bb8129979df1dc0cb5a5a5.json</a></li>
-                    <li><a href="#">graph-rocketmq-c94fc4fa562ddc20332c3add01b95e291cd325a3.json</a></li>
-                    <li><a href="#">graph-rocketmq-e9a0d62dbd8a1a6163870828d583300eb27e324a.json</a></li>
-                    <li><a href="#">graph-rocketmq-f508f131f7dee2bcb86e66a6beb7bbdedbe31bc6.json</a></li>
-                    <li><a href="#">graph-spring-framework-3c1adf7f6af0dff9bda74f40dabe8cf428a62003.json</a></li>
+                    <li><a href="#" value="./tasks/graph-elasticsearch-81971ac8fb9a4f42076602a985888120d4b1d599.json">elasticsearch-81971ac8fb9a4f42076602a985888120d4b1d599</a></li>
+                    <li><a href="#" value="./tasks/graph-rocketmq-3292d039ae882f42168d5f98969df83130ca05fb.json">rocketmq-3292d039ae882f42168d5f98969df83130ca05fb</a></li>
+                    <li><a href="#" value="./tasks/graph-rocketmq-37cf2a7cb706a0cfe5b217940467c4a9cb33626e.json">rocketmq-37cf2a7cb706a0cfe5b217940467c4a9cb33626e</a></li>
+                    <li><a href="#" value="./tasks/graph-rocketmq-85467dfd34d8ff379d2ddfec0489d78dcba20c27.json">rocketmq-85467dfd34d8ff379d2ddfec0489d78dcba20c27</a></li>
+                    <li><a href="#" value="./tasks/graph-rocketmq-b1fcf1b83b659bd03bcebf651d9e88c294a89e07.json">rocketmq-b1fcf1b83b659bd03bcebf651d9e88c294a89e07</a></li>
+                    <li><a href="#" value="./tasks/graph-rocketmq-b421d48c476e74a8c7bb8129979df1dc0cb5a5a5.json">rocketmq-b421d48c476e74a8c7bb8129979df1dc0cb5a5a5</a></li>
+                    <li><a href="#" value="./tasks/graph-rocketmq-c94fc4fa562ddc20332c3add01b95e291cd325a3.json">rocketmq-c94fc4fa562ddc20332c3add01b95e291cd325a3</a></li>
+                    <li><a href="#" value="./tasks/graph-rocketmq-e9a0d62dbd8a1a6163870828d583300eb27e324a.json">rocketmq-e9a0d62dbd8a1a6163870828d583300eb27e324a</a></li>
+                    <li><a href="#" value="./tasks/graph-rocketmq-f508f131f7dee2bcb86e66a6beb7bbdedbe31bc6.json">rocketmq-f508f131f7dee2bcb86e66a6beb7bbdedbe31bc6</a></li>
+                    <li><a href="#" value="./tasks/graph-spring-framework-046380988b9f98bed43fad1943c8f10f6a1429de.json">spring-framework-046380988b9f98bed43fad1943c8f10f6a1429de</a></li>
+                    <li><a href="#" value="./tasks/graph-spring-framework-3c1adf7f6af0dff9bda74f40dabe8cf428a62003.json">spring-framework-3c1adf7f6af0dff9bda74f40dabe8cf428a62003</a></li>
+                    <li><a href="#" value="./tasks/graph-spring-framework-773b2f06a10679979ee747ad2ee2182eaafcc8cd.json">spring-framework-773b2f06a10679979ee747ad2ee2182eaafcc8cd</a></li>
                 </ul>
                 <!--            <button type="button" class="btn btn-default" style="margin-left: 200vh" onclick="reset()">Reset</button>-->
             </div>
@@ -113,7 +118,7 @@
 <script src="mouseevent.js"></script>
 <script src="layout.js"></script>
 <script src="init_node.js"></script>
-<script src="refresh.js"></script>
+<script src="reselecttask.js"></script>
 <script src="main.js"></script>
 
 
