feat : add compteCoordinates() func

--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -114,7 +114,7 @@
 <script src="../js/dagre.min.js"></script>
 <script src="../js/jsplumb.js"></script>
 <script src="../js/jquery.panzoom.min.js"></script>
-
+<!--<script src=" ../node_modules/monaco-editor/dev/vs/editor/editor.main.js"></script>-->
 <script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
 <script src="./data1.js"></script>
 
